syntax = "proto3";

// Request used by Execution Server to initiate an TestInstruction Execution by Execution Client
message ProcessTestInstructionExecutionRequest {

  CurrentFenixExecutionWorkerProtoFileVersionEnum ProtoFileVersionUsedByClient = 1; // The latest proto file version number to be used
  TestInstructionExecutionMessage TestInstruction = 2; // The TestInstruction itself an its attributes

  message TestInstructionExecutionMessage {
    string TestInstructionExecutionUuid = 1; // The unique uuid for the TestInstructionExecution, set by Fenix Execution Server
    string TestInstructionUuid = 2; // TestInstruction UUID, set by Client system
    string TestInstructionName = 3; // TestInstruction Name, set by Client system
    uint32 MajorVersionNumber = 4; // Major Version Number
    uint32 MinorVersionNumber = 5; // Minor Version Number
    repeated TestInstructionAttributeMessage TestInstructionAttributes = 6; // A list of all attributes for the TestInstruction
  }

  message TestInstructionAttributeMessage {
    TestInstructionAttributeTypeEnum TestInstructionAttributeType = 1; // Defines witch type attribute; TEXTBOX, COMBOBOX...
    string TestInstructionAttributeUuid = 2; // The unique uuid for the TestInstructionAttribute, set by client system
    string TestInstructionAttributeName = 3; // The name of the TestInstructionAttribute
    string AttributeValueAsString = 4; // The String-representation of the value
    string AttributeValueUuid = 5; // Combo-boxes can us a UUID as unique value behind the text visible in the combo-box
    string TestInstructionAttributeTypeUuid = 7; // The unique uuid for the TestInstructionAttribute-type, used to extract certain attributes types in Connector (CA)
    string TestInstructionAttributeTypeName = 8; // The name for the TestInstructionAttribute-type, used to group attributes in GUI
  }


  TestDataMessage TestData = 7; // TestData used in TestExecution

  message TestDataMessage {
    string TestDataSetUuid = 1; // Reference to TestDataSet held by client system to understand what testdata to use
    repeated ManualOverrideForTestDataMessage ManualOverrideForTestData = 2; // If the user has done manual changes to testdata then that is specified here

    message ManualOverrideForTestDataMessage {
      string TestDataSetAttributeUuid = 1; // A unique reference for the specified TestDataSetAttribute
      string TestDataSetAttributeName = 2; // The name of the TestDataSetAttribute
      string TestDataSetAttributeValue = 3; // The value for the TestDataSetAttribute to be used within the test
    }
  }

  // The TestInstructionAttribute can have one of the following types: "TextBox", "ComboBox", "FileSelector", "FunctionSelector"
  enum TestInstructionAttributeTypeEnum {
    TEXTBOX = 0; // Defines that TestInstructionAttribute of type "TextBox"
    COMBOBOX = 1; // Defines that TestInstructionAttriebute of type ComboBox
    FILE_SELECTOR = 2; // Defines that TestInstructionAttribute of type FileSelector
    FUNCTION_SELECTOR = 3; // Defines that TestInstructionAttribute of type FunctionSelector
  }

  // Message Holding information about who is the calling client system
  message ClientSystemIdentificationMessage {
    string DomainUuid = 1; // The Users Id, SEB S-id will be used for SEB
    CurrentFenixExecutionWorkerProtoFileVersionEnum ProtoFileVersionUsedByClient = 2; // The latest proto file version number to be used
  }


  // Used to have client and server in sync with using the same proto file version
  enum CurrentFenixExecutionWorkerProtoFileVersionEnum {
    VERSION_0_0 = 0 [deprecated = true];
    VERSION_0_1 = 1 [deprecated = true];
    VERSION_0_2 = 2 [deprecated = true];
    VERSION_0_3 = 3; // Current version
  }

}